--- a/sites/all/themes/effoundationtheme/css/ef.css
+++ b/sites/all/themes/effoundationtheme/css/ef.css
@@ -14757,16 +14757,16 @@ ul.links.inline-list.authors-list li:last-child:after{
 
 .related-content-aside-3 ul.metadata-items li{
 	border-left: 1px solid #2d68aa!important;
-	margin: 0 0 0 4px;
+	margin: 0 0 0 0px;
 }
 
 .related-content-aside-3 ul.metadata-items li:first-child {
     border-left:0!important;
-    margin-left:0;
+    margin: 0 0 0 0 !important;;
 }
 
 .related-content-aside-3 a{
-	font-weight: bold;
+	font-family:'OpenSans-Bold-webfont',Arial,Helvetica,sans-serif;
 	display: block!important;
 	padding: 8px 20px 0px 0px;
 	width: 100%;
@@ -14790,3 +14790,4 @@ ul.links.inline-list.authors-list li:last-child:after{
     float: right;
     display: inline;
 }
+
